--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,5 +18,11 @@ akka {
       "akka://Store@127.0.0.1:25251",
       "akka://Store@127.0.0.1:25252",
       "akka://Store@127.0.0.1:25253"]
+    roles = [
+        "StoreSharding"
+    ]
+    sharding{
+        number-of-shards = 300
+    }
   }
 }
